# imdb_ratings

./: .gitignore  CLAUDE.md  pyproject.toml  titles.xlsx
.claude/: settings.local.json
.github/workflows/: daily-update.yml
imdb_ratings/: __init__.py  config.py  database.py  excel_export.py  exceptions.py  export_excel.py  logging_config.py  main.py  movie_database.py  scrape_reviews.py  update_supabase.py  utils.py
imdb_ratings/core/: config.py  constants.py  database.py  logging_config.py
imdb_ratings/repository/: __init__.py  base.py  review_repository.py  title_repository.py  weighted_ratings_repository.py
imdb_ratings/updater/: __init__.py  get_db.py  main_update.py  movie_database.py  scrape_reviews.py  update_first_world.py  update_reviews.py  update_supabase.py  update_titles.py  update_weighted_ratings.py
imdb_ratings/updater/sources/: __init__.py  imdb_dataset.py  omdb_client.py  scrape_reviews.py
